<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D3646"
    tools:context=".CountryActivity">

    <View
        android:id="@+id/view"
        android:layout_width="296dp"
        android:layout_height="45dp"
        android:background="@drawable/bg_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <ImageView
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/search_button"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.523"
        app:srcCompat="@drawable/ic_search_24px" />

    <EditText
        android:id="@+id/country"
        android:layout_width="202dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/country"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="#99FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/countryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coronaInfo"
        android:textColor="#CCFFFFFF"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="10dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="75"
        android:progressBackgroundTint="#3D4953"
        android:progressTint="#A6FF8D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countryName"
        app:layout_constraintVertical_bias="0.184" />

    <TextView
        android:id="@+id/globalRecovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/global_recovered"
        android:textColor="#CCFFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar2" />


    <TextView
        android:id="@+id/globalRecoveredNumber"
        android:layout_width="118dp"
        android:layout_height="16dp"
        android:text="@string/global_recovered_number"
        android:textColor="#CCFFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/progressBar3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/globalRecovered"
        app:layout_constraintTop_toBottomOf="@+id/progressBar2"
        app:layout_constraintVertical_bias="0.285" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="10dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="100"
        android:progressBackgroundTint="#3D4953"
        android:progressTint="#65B9FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countryName"
        app:layout_constraintVertical_bias="0.062" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/global_cases"
        android:textColor="#CCFFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />


    <TextView
        android:id="@+id/globalCasesNumber"
        android:layout_width="120dp"
        android:layout_height="17dp"
        android:text="@string/global_cases_number"
        android:textColor="#CCFFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/progressBar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.279" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="10dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="5"
        android:progressBackgroundTint="#3D4953"
        android:progressTint="#FF5B5B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countryName"
        app:layout_constraintVertical_bias="0.309" />

    <TextView
        android:id="@+id/globalDeaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/global_deaths"
        android:textColor="#CCFFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar3" />

    <TextView
        android:id="@+id/globalDeathsNumber"
        android:layout_width="116dp"
        android:layout_height="18dp"
        android:text="@string/global_deaths_number"
        android:textColor="#CCFFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/summery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toEndOf="@+id/globalDeaths"
        app:layout_constraintTop_toBottomOf="@+id/progressBar3"
        app:layout_constraintVertical_bias="0.25" />

    <View
        android:id="@+id/summery"
        android:layout_width="304dp"
        android:layout_height="333dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/bg_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/globalDeaths"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/comparison"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highest_cases"
        android:textColor="#CCFFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/summery"
        app:layout_constraintEnd_toEndOf="@+id/summery"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="@+id/summery"
        app:layout_constraintTop_toTopOf="@+id/summery"
        app:layout_constraintVertical_bias="0.061" />

    <TextView
        android:id="@+id/highest1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highest_1"
        android:textColor="#CCFFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/summery"
        app:layout_constraintEnd_toEndOf="@+id/summery"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="@+id/summery"
        app:layout_constraintTop_toTopOf="@+id/summery"
        app:layout_constraintVertical_bias="0.337" />

    <TextView
        android:id="@+id/highest1Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highest_1_number"
        android:textColor="#CCFFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/summery"
        app:layout_constraintEnd_toEndOf="@+id/summery"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="@+id/summery"
        app:layout_constraintTop_toTopOf="@+id/summery"
        app:layout_constraintVertical_bias="0.334" />

    <TextView
        android:id="@+id/highest2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highest_2"
        android:textColor="#CCFFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/summery"
        app:layout_constraintEnd_toEndOf="@+id/summery"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="@+id/summery"
        app:layout_constraintTop_toTopOf="@+id/summery"
        app:layout_constraintVertical_bias="0.449" />

    <TextView
        android:id="@+id/highest2Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highest_2_number"
        android:textColor="#CCFFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/summery"
        app:layout_constraintEnd_toEndOf="@+id/summery"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="@+id/summery"
        app:layout_constraintTop_toTopOf="@+id/summery"
        app:layout_constraintVertical_bias="0.445" />

    <TextView
        android:id="@+id/highest3Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highest_3_number"
        android:textColor="#CCFFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/summery"
        app:layout_constraintEnd_toEndOf="@+id/summery"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="@+id/summery"
        app:layout_constraintTop_toTopOf="@+id/summery"
        app:layout_constraintVertical_bias="0.557" />

    <TextView
        android:id="@+id/highest4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highest_4"
        android:textColor="#CCFFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/summery"
        app:layout_constraintEnd_toEndOf="@+id/summery"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="@+id/summery"
        app:layout_constraintTop_toTopOf="@+id/summery"
        app:layout_constraintVertical_bias="0.678" />

    <TextView
        android:id="@+id/highest6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highest_6"
        android:textColor="#CCFFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/summery"
        app:layout_constraintEnd_toEndOf="@+id/summery"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="@+id/summery"
        app:layout_constraintTop_toTopOf="@+id/summery"
        app:layout_constraintVertical_bias="0.901" />

    <TextView
        android:id="@+id/highest5Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highest_5_number"
        android:textColor="#CCFFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/summery"
        app:layout_constraintEnd_toEndOf="@+id/summery"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="@+id/summery"
        app:layout_constraintTop_toTopOf="@+id/summery"
        app:layout_constraintVertical_bias="0.792" />

    <TextView
        android:id="@+id/highest5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highest_5"
        android:textColor="#CCFFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/summery"
        app:layout_constraintEnd_toEndOf="@+id/summery"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="@+id/summery"
        app:layout_constraintTop_toTopOf="@+id/summery"
        app:layout_constraintVertical_bias="0.792" />

    <TextView
        android:id="@+id/highest6Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highest_6_number"
        android:textColor="#CCFFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/summery"
        app:layout_constraintEnd_toEndOf="@+id/summery"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="@+id/summery"
        app:layout_constraintTop_toTopOf="@+id/summery"
        app:layout_constraintVertical_bias="0.898" />

    <TextView
        android:id="@+id/highest4Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highest_4_number"
        android:textColor="#CCFFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/summery"
        app:layout_constraintEnd_toEndOf="@+id/summery"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="@+id/summery"
        app:layout_constraintTop_toTopOf="@+id/summery"
        app:layout_constraintVertical_bias="0.678" />

    <TextView
        android:id="@+id/highest3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highest_3"
        android:textColor="#CCFFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/summery"
        app:layout_constraintEnd_toEndOf="@+id/summery"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="@+id/summery"
        app:layout_constraintTop_toTopOf="@+id/summery"
        app:layout_constraintVertical_bias="0.56" />

    <TextView
        android:id="@+id/searchedCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_country"
        android:textColor="#CCFFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/summery"
        app:layout_constraintEnd_toEndOf="@+id/summery"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="@+id/summery"
        app:layout_constraintTop_toTopOf="@+id/summery"
        app:layout_constraintVertical_bias="0.213" />

    <TextView
        android:id="@+id/searchCountryNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_country_number"
        android:textColor="#CCFFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/summery"
        app:layout_constraintEnd_toEndOf="@+id/summery"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="@+id/summery"
        app:layout_constraintTop_toTopOf="@+id/summery"
        app:layout_constraintVertical_bias="0.213" />

</androidx.constraintlayout.widget.ConstraintLayout>
